--- a/silver_weather/templates/registration/login.html
+++ b/silver_weather/templates/registration/login.html
@@ -5,7 +5,7 @@
     <script src="{% static 'js/bootstrap.js' %}"></script>
 <style>
     body {color: #000000;
-    background: url(../static/background_images/three.jpg) no-repeat center center fixed;
+    background: url(../../static/background_images/three.jpg) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;}
