--- a/silver_weather/templates/registration/register.html
+++ b/silver_weather/templates/registration/register.html
@@ -5,7 +5,7 @@
 <style>
 
         body {
-    background: url(../static/background_images/register.jpg) no-repeat center center fixed;
+    background: url(../../static/background_images/register.gif) no-repeat center center fixed;
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
